Bug fixes.
